--- a/style/style.sass
+++ b/style/style.sass
@@ -3,8 +3,8 @@
     border: 2px solid #78ddcc
     font-size: 1.2rem
     border-radius: 50%
-    width: 30px
-    height: 30px
+    width: 2rem 
+    height: 2rem
     display: flex
     justify-content: center
     align-items: center
